@@ -13,7 +13,9 @@
   <artifactId>skel</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>skel</name>
-  <description>Demo project for Spring Boot</description>
+  <description>🦴 Skel CLI: A command-line tool for generating project skeletons in multiple
+    languages, fast and customizable.
+  </description>
   <url/>
   <licenses>
     <license/>
@@ -29,12 +31,17 @@
   </scm>
   <properties>
     <java.version>21</java.version>
+    <spring.version>3.5.5</spring.version>
     <picocli.version>4.7.7</picocli.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-logging</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -52,8 +59,8 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.38</version>
       <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>info.picocli</groupId>
@@ -82,6 +89,15 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
